ENH: 상세 커리큘럼 페이지 추가 및 연동

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-tachometer"></i></div>
-                        <h4><a href="#services">
+                        <h4><a href="https://sepia-coat-481.notion.site/5-c9fc0e4581e3449992012140cbc1f577" target="_blank">
                             성능 테스트 & 성능 튜닝</a></h4>
                         <p>Jmeter or Locust or Gatling 툴 사용 <br>
                             의미있는 성능 지표 추출 <br>
