ENH: 상세 커리큘럼 페이지 추가 및 연동

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-slideshow"></i></div>
-                        <h4><a href="#services">
+                        <h4><a href="https://sepia-coat-481.notion.site/6-aa58bc5dc61b4799a37c86ca48310e12" target="_blank">
                             모니터링 & 트러블 슈팅</a></h4>
                         <p>로깅 전략 탐구 <br>
                             예외 처리 전략 탐구 <br>
@@ -363,7 +363,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-window-split"></i></div>
-                        <h4><a href="#services">
+                        <h4><a href="https://sepia-coat-481.notion.site/7-1583363d7ef448f79a678d9c1d58cc62" target="_blank">
                             가상화 기술 적용</a></h4>
                         <p>docker 및 가상화 컨테이너 적용 <br>
                             docker-compose 여러 컨테이너 실행 <br>
@@ -374,7 +374,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-people"></i></div>
-                        <h4><a href="#services">
+                        <h4><a href="https://sepia-coat-481.notion.site/8-1f96cb4e7e4e4c04932a2bcf4e4d2eaf" target="_blank">
                             취업 지원</a></h4>
                         <p>네카라쿠배+3N 지원 전략 지원 <br>
                             모의 기술 면접 진행 <br>
