ENH: 아이콘 변경

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <h1 class="logo me-auto me-lg-0">
             <a href="#hero">
                 <img class="img-fluid mb-1"
-                     src="assets/img/favicon/LOGO.PNG"
-                     alt="assets/img/favicon/favicon.png"
+                     src="assets/img/favicon/LOGO3.PNG"
+                     alt="assets/img/favicon/favicon3.png"
                      width="50" height="30" alt="..."
-                     onmouseover="this.src='assets/img/favicon/favicon.png'"
-                     onmouseleave="this.src='assets/img/favicon/LOGO.PNG'"
+                     onmouseover="this.src='assets/img/favicon/favicon3.png'"
+                     onmouseleave="this.src='assets/img/favicon/LOGO3.PNG'"
                 />
                 ccommit
             </a>
@@ -812,8 +812,8 @@
                         <h3 class="logo me-auto me-lg-0">
                             <a href="#footer" style="color:white">
                                 <img class="img-fluid mb-1"
-                                     src="assets/img/favicon/LOGO.PNG"
-                                     alt="assets/img/favicon/LOGO.png"
+                                     src="assets/img/favicon/LOGO3.PNG"
+                                     alt="assets/img/favicon/LOGO3.png"
                                      width="30" height="20" alt="..."
                                 />
                                 ccommit
