--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <h1 class="logo me-auto me-lg-0">
             <a href="#hero">
                 <img class="img-fluid mb-1"
-                     src="assets/img/favicon/LOGO3.PNG"
+                     src="assets/img/favicon/LOGO.png"
                      alt="assets/img/favicon/favicon3.png"
                      width="50" height="30" alt="..."
                      onmouseover="this.src='assets/img/favicon/favicon3.png'"
-                     onmouseleave="this.src='assets/img/favicon/LOGO3.PNG'"
+                     onmouseleave="this.src='assets/img/favicon/LOGO.png'"
                 />
                 ccommit
             </a>
@@ -105,7 +105,7 @@
             <div class="col-xl-6 col-lg-8">
                 <h1>1:1 맞춤형 <br>
                     개발자 멘토링
-<!--                    <span>.</span>-->
+                    <!--                    <span>.</span>-->
                 </h1>
                 <!--          <h2>많은 취준생 및 주니어 개발자들은 보여지는 <br>실력을 키우기 급급합니다.-->
                 <!--            멘토링을 통해 <br>지식보다 지식을 얻는 방법을 알려드립니다.</h2>-->
@@ -473,20 +473,20 @@
                     </div>
                 </div>
 
-<!--                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">-->
-<!--                    <div class="portfolio-wrap">-->
-<!--                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">-->
-<!--                        <div class="portfolio-info">-->
-<!--                            <h4>used-market-server</h4>-->
-<!--                            <p>번개장터 같은 중고거래 사이트</p>-->
-<!--                            <div class="portfolio-links">-->
-<!--                                <a href="https://github.com/ccommit/used-market-server"-->
-<!--                                   title="used-market-server"-->
-<!--                                   target="_blank"><i class="bx bx-link"></i></a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <!--                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">-->
+                <!--                    <div class="portfolio-wrap">-->
+                <!--                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">-->
+                <!--                        <div class="portfolio-info">-->
+                <!--                            <h4>used-market-server</h4>-->
+                <!--                            <p>번개장터 같은 중고거래 사이트</p>-->
+                <!--                            <div class="portfolio-links">-->
+                <!--                                <a href="https://github.com/ccommit/used-market-server"-->
+                <!--                                   title="used-market-server"-->
+                <!--                                   target="_blank"><i class="bx bx-link"></i></a>-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
                     <div class="portfolio-wrap">
@@ -741,10 +741,10 @@
                             <img src="assets/img/testimonials/user.png"
                                  style="max-width:40%; height:35%; margin: 20px -60px 0 80px;" alt="">
                             <div class="social">
-<!--                                <a href="#"><i class="bi bi-twitter"></i></a>-->
-<!--                                <a href="#"><i class="bi bi-facebook"></i></a>-->
-<!--                                <a href="#"><i class="bi bi-instagram"></i></a>-->
-<!--                                <a href="#"><i class="bi bi-linkedin"></i></a>-->
+                                <!--                                <a href="#"><i class="bi bi-twitter"></i></a>-->
+                                <!--                                <a href="#"><i class="bi bi-facebook"></i></a>-->
+                                <!--                                <a href="#"><i class="bi bi-instagram"></i></a>-->
+                                <!--                                <a href="#"><i class="bi bi-linkedin"></i></a>-->
                                 <a href="https://kmong.com/gig/353197" target="_blank"><i class="bi bi-link"></i></a>
                                 <a href="https://taling.me/Talent/Detail/40572" target="_blank"><i class="bi bi-link"></i></a>
                             </div>
@@ -812,8 +812,8 @@
                         <h3 class="logo me-auto me-lg-0">
                             <a href="#footer" style="color:white">
                                 <img class="img-fluid mb-1"
-                                     src="assets/img/favicon/LOGO3.PNG"
-                                     alt="assets/img/favicon/LOGO3.png"
+                                     src="assets/img/favicon/LOGO.png"
+                                     alt="assets/img/favicon/LOGO.png"
                                      width="30" height="20" alt="..."
                                 />
                                 ccommit
@@ -831,10 +831,10 @@
                                     class="bx bxl-facebook"></i></a>
                             <a href="https://www.instagram.com/ccommit.kr/" class="instagram"
                                target="_blank"><i class="bx bxl-instagram"></i></a>
-<!--                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i-->
-<!--                                    class="bx bxl-linkedin"></i></a>-->
-<!--                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i-->
-<!--                                    class="bx bxl-youtube"></i></a>-->
+                            <!--                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i-->
+                            <!--                                    class="bx bxl-linkedin"></i></a>-->
+                            <!--                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i-->
+                            <!--                                    class="bx bxl-youtube"></i></a>-->
                         </div>
                     </div>
                 </div>
