ENH: 커리큘럼 링크 전체적으로 클릭하게 수정

--- a/index.html
+++ b/index.html
@@ -282,20 +282,22 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')" >
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-signpost"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64" target="_blank">
+                        <h4><a>
                             사전 준비</a></h4>
                         <p>기존 포트폴리오 정리 <br>
                             목표 회사 & 도메인 정하기 <br>
                             성장하는 개발자 마음가짐 탐구 </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-book"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/1-6e39618af9774dac864914a29f226b37" target="_blank">
+                        <h4><a>
                             이론 공부</a></h4>
                         <p>Java 언어에 대한 깊은 이해 <br>
                             Spring 프레임워크 구성 요소 이해 <br>
@@ -303,11 +305,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-                     data-aos-delay="200">
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/2-debc40dac89b4c9385b07ad8e6a6a87b" target="_blank">
+                        <h4><a>
                             프로젝트 진행</a></h4>
                         <p>코드리뷰를 통한 협업 경험 <br>
                             개발 블로그 작성 경험 <br>
@@ -315,11 +317,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
-                     data-aos-delay="300">
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-world"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/3-884b2dc06d52433198eb80b25c741e44" target="_blank">
+                        <h4><a>
                             서버 배포 & 프로세스 자동화</a></h4>
                         <p>젠킨스 빌드 자동화툴 적용 <br>
                             클라우드 서비스 적용 <br>
@@ -328,20 +330,22 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-cloud"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/4-66b19332b3854fb3a7324d07c6f62fe9" target="_blank">
+                        <h4><a>
                             클라우드 기술 적용</a></h4>
                         <p>아마존 서버 설치 및 배포 <br>
                             클라우드 환경에 CI/CD 적용 <br>
                             로드 벨런서 적용 및 알고리즘 탐구</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-tachometer"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/5-c9fc0e4581e3449992012140cbc1f577" target="_blank">
+                        <h4><a>
                             성능 테스트 & 성능 튜닝</a></h4>
                         <p>Jmeter or Locust or Gatling 툴 사용 <br>
                             의미있는 성능 지표 추출 <br>
@@ -349,10 +353,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-slideshow"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/6-aa58bc5dc61b4799a37c86ca48310e12" target="_blank">
+                        <h4><a>
                             모니터링 & 트러블 슈팅</a></h4>
                         <p>로깅 전략 탐구 <br>
                             예외 처리 전략 탐구 <br>
@@ -360,10 +365,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-window-split"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/7-1583363d7ef448f79a678d9c1d58cc62" target="_blank">
+                        <h4><a>
                             가상화 기술 적용</a></h4>
                         <p>docker 및 가상화 컨테이너 적용 <br>
                             docker-compose 여러 컨테이너 실행 <br>
@@ -371,10 +377,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-people"></i></div>
-                        <h4><a href="https://sepia-coat-481.notion.site/8-1f96cb4e7e4e4c04932a2bcf4e4d2eaf" target="_blank">
+                        <h4><a>
                             취업 지원</a></h4>
                         <p>네카라쿠배+3N 지원 전략 지원 <br>
                             모의 기술 면접 진행 <br>
