ENH: 헤더바 로고 마우스 오버 색갈 변경

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <h1 class="logo me-auto me-lg-0">
             <a href="#hero">
                 <img class="img-fluid mb-1"
-                     src="assets/img/favicon/LOGO.png"
-                     alt="assets/img/favicon/favicon3.png"
+                     alt="assets/img/favicon/LOGO.png"
+                     src="assets/img/favicon/favicon3.png"
                      width="50" height="30" alt="..."
-                     onmouseover="this.src='assets/img/favicon/favicon3.png'"
-                     onmouseleave="this.src='assets/img/favicon/LOGO.png'"
+                     onmouseleave="this.src='assets/img/favicon/favicon3.png'"
+                     onmouseover="this.src='assets/img/favicon/LOGO.png'"
                 />
                 ccommit
             </a>
