ENH: 블로그 페이지 추가

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <li><a class="nav-link scrollto " href="#portfolio">프로젝트</a></li>
                 <li><a class="nav-link scrollto" href="#testimonials">멘티 후기</a></li>
                 <li><a class="nav-link scrollto" href="#team">멘토 소개</a></li>
+                <li><a class="nav-link scrollto" href="blog.html">블로그</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
