--- a/index.html
+++ b/index.html
@@ -103,17 +103,45 @@
     <div class="container" data-aos="fade-up">
 
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
-            <div class="col-xl-6 col-lg-8">
-                <h1>1:1 맞춤형 <br>
-                    개발자 멘토링
-                    <!--                    <span>.</span>-->
-                </h1>
-                <!--          <h2>많은 취준생 및 주니어 개발자들은 보여지는 <br>실력을 키우기 급급합니다.-->
-                <!--            멘토링을 통해 <br>지식보다 지식을 얻는 방법을 알려드립니다.</h2>-->
+<!--            <div class="col-xl-6 col-lg-8">-->
+<!--                <h1>1:1 맞춤형 <br>개발자 멘토링-->
+<!--                </h1>-->
+<!--            </div>-->
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+<!--                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>-->
+                </div>
+                <div class="carousel-inner mt-1"  style="height:330px;width: 60%; margin: auto; display: block;" >
+                    <div class="carousel-item active" data-bs-interval="3000">
+                        <a href="https://www.instagram.com/p/CpIO5WULLWV/" target="_blank">
+                        <img src="assets/img/banner/1.png" class="d-block w-250 mb-3" alt="..." style="height:330px;">
+                        </a>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <a href="https://forms.gle/nKxQrvw8Be8g68FLA" target="_blank">
+                        <img src="assets/img/banner/2.png" class="d-block w-350  mb-3" alt="..." style="height:330px;">
+                        </a>
+                    </div>
+<!--                    <div class="carousel-item">-->
+<!--                        <img src="assets/img/clients/client-4.png" class="d-block w-200  mb-3" alt="..." style="height:330px;">-->
+<!--                        <div class="carousel-caption d-none d-md-block">-->
+<!--                        </div>-->
+<!--                    </div>-->
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
 
-        <div class="row gy-4 mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
+        <div class="row gy-4 justify-content-center py-3" data-aos="zoom-in" data-aos-delay="250">
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-book fs-1"></i>
