ENH: 배너 3번쨰 사진  추가 및 링크 추가

--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-inner mt-1"  style="height:330px;width: 60%; margin: auto; display: block;" >
+                <div class="carousel-inner mt-1"  style="height:330px;width: 55%; margin: auto; display: block;" >
                     <div class="carousel-item active" data-bs-interval="3000">
                         <a href="https://www.instagram.com/p/CpIO5WULLWV/" target="_blank">
                         <img src="assets/img/banner/1.png" class="d-block w-250 mb-3" alt="..." style="height:330px;">
@@ -128,6 +129,11 @@
                     <div class="carousel-item" data-bs-interval="3000">
                         <a href="https://forms.gle/nKxQrvw8Be8g68FLA" target="_blank">
                         <img src="assets/img/banner/2.png" class="d-block w-350  mb-3" alt="..." style="height:330px;">
+                        </a>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="3000">
+                        <a href="#about" target="_blank">
+                            <img src="assets/img/banner/3.png" class="d-block w-350  mb-3" alt="..." style="height:330px;">
                         </a>
                     </div>
                 </div>
@@ -146,50 +152,50 @@
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-book fs-1"></i>
-                    <h3><a href="#">이론 공부</a></h3>
+                    <h3><a href="#services">이론 공부</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-laptop fs-1"></i>
-                    <h3><a href="#">프로젝트 <br>진행</a></h3>
+                    <h3><a href="#services">프로젝트 <br>진행</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-globe fs-1"></i>
-                    <h3><a href="#">서버 배포 <br>프로세스 자동화</a></h3>
+                    <h3><a href="#services">서버 배포 <br>프로세스 자동화</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-cloud fs-1"></i>
-                    <h3><a href="#">클라우드 <br>기술 적용</a></h3>
+                    <h3><a href="#services">클라우드 <br>기술 적용</a></h3>
                 </div>
             </div>
             <dib></dib>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-star fs-1"></i>
-                    <h3><a href="#">성능 테스트 <br>성능 튜닝</a></h3>
+                    <h3><a href="#services">성능 테스트 <br>성능 튜닝</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-triangle fs-1"></i>
-                    <h3><a href="#">모니터링 <br>트러블 슈팅</a></h3>
+                    <h3><a href="#services">모니터링 <br>트러블 슈팅</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-eye fs-1"></i>
-                    <h3><a href="#">가상화 <br>기술 적용</a></h3>
+                    <h3><a href="#services">가상화 <br>기술 적용</a></h3>
                 </div>
             </div>
             <div class="col-xl-2 col-md-4">
                 <div class="icon-box">
                     <i class="bi-bank fs-1"></i>
-                    <h3><a href="#">취업 지원</a></h3>
+                    <h3><a href="#services">취업 지원</a></h3>
                 </div>
             </div>
         </div>
