--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </a>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <a href="#about" target="_blank">
+                        <a href="#about">
                             <img src="assets/img/banner/3.png" class="d-block w-350  mb-3" alt="..." style="height:330px;">
                         </a>
                     </div>
