--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
     @media screen and (min-width: 1201px) and (max-width: 1800px) {
       #bannerText { display: none; }   /* hide it elsewhere */
     }
+    .carousel-control-next:after
+    {
+      padding-right: 350px;
+      content: '>';
+      font-size: 35px;
+      color: white;
+    }
+
+    .carousel-control-prev:after {
+      padding-left: 350px;
+      content: '<';
+      font-size: 35px;
+      color: white;
+    }
     </style>
 </head>
 
@@ -138,12 +152,12 @@
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+<!--                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--                    <span class="visually-hidden">Previous</span>-->
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
+<!--                    <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--                    <span class="visually-hidden">Next</span>-->
                 </button>
             </div>
         </div>
