--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-emoji-smile"></i>
                                     <p>멘티 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="28"
+                                    <span data-purecounter-start="0" data-purecounter-end="29"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -670,10 +670,11 @@
                                     <span data-purecounter-start="0" data-purecounter-end="4300"
                                           data-purecounter-duration="4" class="purecounter"
                                           style="padding-top:6px;"></span>
-                                    <strong style="padding-left:130px;">만원</strong>
+                                    <strong style="padding-left:130px;padding-bottom:50px;">만원</strong>
 
                                 </div>
                             </div>
+                            <span style="text-align:right;">2023년 02월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
