--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             </div>
 
             <div class="row">
-                <div class="image col-lg-6" style='background-image: url("assets/img/features.jpg");'
+                <div class="image col-lg-6" style='background-image: url("assets/img/3.jpg");'
                      data-aos="fade-right"></div>
                 <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
                     <div class="icon-box" style="padding-bottom: 23px;" data-aos="zoom-in" data-aos-delay="150">
@@ -624,13 +624,10 @@
                 <p>멘티 현황</p>
             </div>
             <div class="row no-gutters">
-                <!--                <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"-->
-                <!--                     data-aos="fade-right" data-aos-delay="100"></div>-->
                 <img src="assets/img/counts-img.jpg" class="testimonial-img" alt="" style="width:550px; height:350px;">
                 <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left"
                      data-aos-delay="100">
                     <div class="content d-flex flex-column justify-content-center">
-                        <!--                        <h3>수강생 현황</h3>-->
                         <div class="row">
                             <div class="col-md-6 d-md-flex align-items-md-stretch">
                                 <div class="count-box">
@@ -674,7 +671,7 @@
 
                                 </div>
                             </div>
-                            <span style="text-align:right;">2023년 02월 기준</span>
+                            <span style="text-align:right;">2023년 03월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
