--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                         <p>
                             경기도 성남시 분당구 <br>
                             장미로 102<br><br>
-                            <strong>Email:</strong> topojs8@naver.com<br>
+                            <strong>제휴 문의 :</strong> topojs8@naver.com<br>
                         </p>
                         <div class="social-links mt-3">
                             <a href="https://github.com/ccommit" class="github" target="_blank"><i
