ENH: youtube 링크 원복, 이미지 교체

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             </div>
 
             <div class="row">
-                <div class="image col-lg-6" style='background-image: url("assets/img/3.jpg");'
+                <div class="image col-lg-6" style='background-image: url("assets/img/img777.png");'
                      data-aos="fade-right"></div>
                 <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
                     <div class="icon-box" style="padding-bottom: 23px;" data-aos="zoom-in" data-aos-delay="150">
@@ -888,8 +888,8 @@
                                target="_blank"><i class="bx bxl-instagram"></i></a>
                             <!--                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i-->
                             <!--                                    class="bx bxl-linkedin"></i></a>-->
-                            <!--                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i-->
-                            <!--                                    class="bx bxl-youtube"></i></a>-->
+                                                        <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i
+                                                                class="bx bxl-youtube"></i></a>
                         </div>
                     </div>
                 </div>
