--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             </div>
 
             <div class="row">
-                <div class="image col-lg-6" style='background-image: url("assets/img/img777.jpg");'
+                <div class="image col-lg-6" style='background-image: url("assets/img/img777-001.jpg");'
                      data-aos="fade-right"></div>
                 <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
                     <div class="icon-box" style="padding-bottom: 23px;" data-aos="zoom-in" data-aos-delay="150">
