--- a/blog-introduce.html
+++ b/blog-introduce.html
@@ -102,69 +102,95 @@
 <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
-    <!--    <section id="breadcrumbs" class="breadcrumbs">-->
-    <!--      <div class="container">-->
+    <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
 
-    <!--        <div class="d-flex justify-content-between align-items-center">-->
-    <!--          <div class="row aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">-->
-    <!--            <div class="col-lg-12 d-flex justify-content-center">-->
-    <!--              <ul id="portfolio-flters">-->
-    <!--                <li data-filter="*" class="filter-active">All</li>-->
-    <!--                <li data-filter=".filter-app">App</li>-->
-    <!--                <li data-filter=".filter-card">Card</li>-->
-    <!--                <li data-filter=".filter-web">Web</li>-->
-    <!--              </ul>-->
-    <!--            </div>-->
-    <!--          </div>-->
-
-    <!--          <h2>CCOMMIT BLOG</h2>-->
-    <!--          <ol>-->
-    <!--            <li><a href="index.html">Home</a></li>-->
-    <!--            <li>Portfolio Details</li>-->
-    <!--          </ol>-->
-    <!--        </div>-->
-
-    <!--      </div>-->
-    <!--    </section>&lt;!&ndash; End Breadcrumbs &ndash;&gt;-->
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
-        <div class="container" data-aos="fade-up">
-            <br>
-            <div class="section-title">
-                <h2>CCOMMIT</h2>
-                <p>블로그</p>
-            </div>
-            <div class="row" data-aos="fade-up" data-aos-delay="100">
-                <div class="col-lg-12 d-flex justify-content-left">
-                    <ul id="portfolio-flters">
-                        <li data-filter="*" class="">전체</li>
-                        <li data-filter=".filter-ccommit">CCOMMIT</li>
-<!--                        <li data-filter=".filter-tech">기술</li>-->
-                    </ul>
-                </div>
-            </div>
-            <div class="row" data-aos="fade-up" data-aos-delay="100">
-
-            </div>
-            <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ccommit">
-                    <div class="portfolio-wrap">
-                        <img src="assets/img/blog/blog1.png" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>CCOMMIT 소개</h4>
-                            <p>[CCOMMIT] 개발자 멘토링 서비스를 진행하게 된 계기</p>
-                            <div class="portfolio-links">
-                                <a href="blog-introduce.html"
-                                   target="_blank"
-                                   title="news"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="d-flex justify-content-between align-items-center">
+               <h2>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                   <b>[CCOMMIT] 개발자 멘토링 서비스를 진행하게 된 계기</b></h2>
+<!--                <ol>-->
+<!--                    <li><a href="index.html">블로그</a></li>-->
+<!--                    <li>Portfolio Details</li>-->
+<!--                </ol>-->
             </div>
 
         </div>
-    </section>
+    </section><!-- End Breadcrumbs -->
+
+    <!-- ======= Portfolio Details Section ======= -->
+    <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+
+            <div class="row gy-4">
+                <div class="col-lg-8" style="float: none; margin:0 auto;">
+                    <div class="portfolio-description">
+<!--                        <h2>[CCOMMIT] 개발자 멘토링 서비스를 진행하게된 계기</h2>-->
+                        <img src="assets/img/log2.png" alt="" style="display:block; margin-left:auto; margin-right:auto;">
+                        <li>CCOMMIT이란?</li>
+                        <ul>                        <li>C(Career)는 개발, 직업, 직장 등을 걸쳐온 경력을 뜻합니다.</li>
+                            <li>Commit은 전념하다, 기록하다, 맡기다, 위임하다 의 의미를 지닙니다.</li>
+                            <li>즉, 개발에 전념하게 도와주는 멘토링 서비스 입니다.</li></ul>
+
+                        <br>
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>배경</h3>
+                        <ul>
+                            <li>저는 게임개발자 였습니다. 본래는 게임을 단순히 좋아하고 프로게이머를 꿈꿧었지만 우연찮게 게임관련 학과 대학교에 진학하였고 게임을 플레이하는 것과는 상관없는 컴퓨터 지식들을 배웠습니다. </li>
+                            <li>그때만해도 OS, 네트워크, 자료구조, 알고리즘등을 왜 배워야하는지 잘 몰랐습니다. 게임회사에서 재직하던 중 운이좋게 플랫폼 개발을 할 수있는 기회가 있었습니다. </li>
+                            <li>그때 게임 기획자가 구상했던 내용에 기반하는 개발이 아닌 게임 개발 보단 상대적으로 변하지 않는 플랫폼 개발을 하며 컴퓨터 지식을 활용하였었습니다. 그때가 개발자로서 터닝포인트가 됬었던것 같습니다. </li>
+                            <li>그동안 대학교 4년 + 개발학원 1년 + 개발단체 3곳에서 배웠었던 단순히 머리속에서만 있었던 지식들을 활용함으로써 이슈들을 해결해나가니 그동안의 지식들이 살아있고 연결됨을 느꼈습니다.</li>
+                            <li>3년차 정도 되었을 무렵 조금더 큰 회사에서 다양한 아키텍처와 그 아키텍처를 담당하고있는 다양한 개발자들에게 피드백 및 동기부여를 받고싶다는 생각이 들었습니다. </li>
+                            <li>10개월정도 준비하고서 원하는 회사에 서류를 내고 면접을보니 좋은 결과가 있었습니다. 궁금하신 분들은 <a href="https://junshock5.tistory.com/150">2020 회고글</a> 을 참고 부탁드립니다.</li>
+                            <li>10개월 정도를 준비하고 그 과정에서 많은 면접들을 보고 정리했던 내용이 아까워서 주변 지인 개발자들에게 전달하였고 상담등을 해주었었습니다. </li>
+                            <li>주변 지인들도 마찬가지로 원하던 취업 & 이직을 하는걸 보고 해당 내용을 커리큘럼화해서 보다 많은사람들에게 도움이 되는 개발자가 되자고 생각하였습니다. 그리하여 CCOMMIT 개발 멘토링 을 진행 하게 되었습니다.</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>과정</h3>
+                        <ol>
+                            <li>공부할 방향과 기술적인 내용, 갖추어야할 스킬 등 좋은 개발자에게 필요한 항목들을 컨설팅합니다.</li>
+                            <li>ex) 자바의 문법, 자료구조, 객체지향 원리, 디자인패턴 종류 및 특징, Spring 프레임워크 특징, DB ERD 설계, 배포 자동화, 네트워크 지식, 좋은 아키텍처, 운영체제, 알고리즘, 트러블 슈팅에 대한 종합적인 지식을 전달드립니다.</li>
+                            <li>포트폴리오의 주제와 설계를 컨설팅해드립니다. 기존 포트폴리오가 부족하다면 토이 프로젝트를 진행하여 멘티의 포트폴리오에 전문성을 추가합니다.</li>
+                            <li>상시로 멘티가 작성한 코드에 대해 코드리뷰를 진행하며 멘티의 성장을 도와드리고 포트폴리오의 질을 더 높여드립니다.</li>
+                            <li>개발하는 소스코드 외에도 설계와 소스코드 관리, 이슈관리, 빌드, 배포, 가상화, 일정관리 등 부가적인 것들에 대해 조언해드립니다.</li>
+                            <li>취업을 하기 전부터 커리어관리는 필요합니다. 개발자로서의 자신을 알려나가는 방법을 조언합니다. (링크드인, 블로그, 포트폴리오 등 관리)</li>
+                            <li>프로젝트 외의 포트폴리오(대외활동 등)으로 이력서가 질높은 내용으로 풍부해지도록 컨설팅해드립니다.</li>
+                            <li>취업(이직)시 서류에 자신의 성과를 잘 작성하는 법을 알려주고, 면접에 대한 시나리오도 짜서 오프라인으로 모의 면접도 진행하면서 면접스킬을 향상시켜드립니다.</li>
+                            <li>취업 또는 이직 후에 회사에 적응 및 제대로 일하는 방법을 알려드립니다. ex) 제대로 질문하는법, 컨플루언서 작성법, 시퀀스 다이어그램 작성법, 연봉 협상 잘하는 법 등등 멘토의 경험을 바탕으로 전달드립니다.</li>
+                        </ol>
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>결과</h3>
+                        <ul style="padding-left:2.0em">
+                            <li style="list-style-type:square;">ccommit은 단순히 서비스를 만드는 것에 그치지 않고, 더 깊은 곳을 보고 설계할 수 있는 개발자로 성장하는 것을 추구합니다.</li>
+                            <li style="list-style-type:square;">클라우드 컴퓨팅 기술의 발전과 마이크로 서비스 패러다임의 확산에 따라 개발자는 더 크게 보고 확장성, 성능을 생각하며 설계할줄 알아야합니다. Devops가 발전함에 따라 개발-통합-배포-운영에 대한 지식을 갖춰야합니다.</li>
+                            <li style="list-style-type:square;">대용량 트래픽을 발생시키고, 이를 모니터링해 더 높은 성능 및 확장성 그리고 리팩토링 경험이 있어야 합니다. CI/CD, 코드 리뷰, 개발 블로그 작성 등을 진행해 일반적인 현직 개발자보다 더 많은 지식을 쌓게 합니다.</li>
+                            <li style="list-style-type:square;">개발 프로세스에 대한 전반적인 것들을 관리해 드리기에 하나를 익힐 때마다 다음 스텝을 계속 제시해드리면서 끝 없이 깊은 지식을 쌓을 수 있도록 합니다. 실제 현직 개발자들도 현재 ccommit에서 멘토링을 받으며 많은 것을 배우고 있다는 평을 주셨으며, 더 좋은 대우와 복지를 가진 회사로 이직에 성공하고 있습니다.</li>
+                        </ul>
+                    </div>
+                    <div class="portfolio-info">
+                        <h3>성과</h3>
+                        <img src="assets/img/profit.PNG" alt="" style=" width : 110%; height: 100%; ">
+                    </div>
+                    <div class="portfolio-description">
+                        <ul>
+                            <li>CCOMMIT은 커리어 향상을 위한 1:1 개발자 멘토링 서비스를 제공합니다.</li>
+                            <li><a href="https://www.ccommit.kr/#services">👉 자바 백엔드 커리큘럼 보러가기</a></li>
+                            <hr>
+                            <li>이 컨텐츠는 CCOMMIT의 고유 자산으로 상업적인 목적의 복사 및 배포를 금합니다.</li>
+                            <li>Copyright © 2023 CCommit Company</li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section><!-- End Portfolio Details Section -->
+
 </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
