--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6  align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300"
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300"
                      OnClick="window.open('https://sepia-coat-481.notion.site/3-884b2dc06d52433198eb80b25c741e44')">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-world"></i></div>
