ENH: 얼리버드 할인 처음 수강시에만 문구 추가

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         <div class="container" data-aos="zoom-in">
             <div class="text-center">
                 <h3>Java Backend 멘토링 모집 중</h3>
-                <p>얼리버드 코스로 등록할 시 연장할 때에도 할인된 가격으로 연장 가능합니다. (1개월 단위 연장 가능).</p>
+                <p>얼리버드 코스로 처음 등록할 시 연장할 때에도 할인된 가격으로 연장 가능합니다. (1개월 단위 연장 가능).</p>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card">
