--- a/index.html
+++ b/index.html
@@ -773,6 +773,21 @@
                             </p>
                         </div>
                     </div>
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <h3>신OO</h3>
+                            <h4>2년차 서버 개발자</h4>
+                            <p>
+                                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                질문에 대해 매우 자유롭고 편안함을 주십니다. 수업과정을 나가면서 멘토님과 대화하다가 연관성 있는 것들까지도 추가로 공부해볼 수 있게  <br>
+                                해주시고, 이해할 수 있도록 끝까지 예시를 들어주시며 설명해주셔서 만족합니다. 그리고 칭찬은 고래도 춤추게 한다는 말처럼 좋은 말씀을 많이 <br>
+                                해주셔서 자신감 또한 얻게 되었습니다. 머리론 알고 있지만 설명하지 못했던 제 자신이, 상대가 알아 들을 수 있을 수 있게 설명을 하려고 노력하고  <br>
+                                이어서 설명을 할 수 있게 되었습니다. 꾸준하진 않지만 가끔 공부를 하거나 책을 읽을 때 “왜?” 라는 생각으로 궁금한 걸 찾아보게 되어  <br>
+                                연장선상의 공부가 되고 스스로 공부할 수 있는 능력이 생겼습니다. 블로그 작성방법도 알게되고 <br> 피드백을 통해 수정하면서 조금씩 나아가는 제 블로그를 얻었습니다.
+                                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
