--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
             <div class="row">
                 <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
                     <img src="assets/img/about.jpg" class="img-fluid" alt="" style="margin-top: 120px;">
+<!--                    <img src="assets/img/high/f.PNG" class="img-fluid" alt="" style="margin-top: 120px;">-->
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"
                      data-aos-delay="100">
@@ -624,7 +625,7 @@
                 <p>멘티 현황</p>
             </div>
             <div class="row no-gutters">
-                <img src="assets/img/counts-img.jpg" class="testimonial-img" alt="" style="width:550px; height:350px;">
+                <img src="assets/img/high/d.PNG" class="testimonial-img" alt="" style="width:410px; height:400px;">
                 <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left"
                      data-aos-delay="100">
                     <div class="content d-flex flex-column justify-content-center">
