ENH: 메인 페이지 배너 교체

--- a/blog.html
+++ b/blog.html
@@ -74,16 +74,15 @@
 <body>
 
 <!-- ======= Header ======= -->
-<header id="header" class="fixed-top" style="background-color: black;">
+<header id="header" class="fixed-top" style="background-color: white;">
     <div class="container d-flex align-items-center justify-content-lg-between">
         <h1 class="logo me-auto me-lg-0">
-            <a href="index.html#hero">
+            <a href="index.html#hero"  style="color: black;font-weight: bold;">
                 <img class="img-fluid mb-1"
                      alt="assets/img/favicon/LOGO.png"
                      src="assets/img/favicon/favicon3.png"
                      width="50" height="30" alt="..."
                      onmouseleave="this.src='assets/img/favicon/favicon3.png'"
-                     onmouseover="this.src='assets/img/favicon/LOGO.png'"
                 />
                 ccommit
             </a>
@@ -91,18 +90,18 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
-                <li><a class="nav-link" href="index.html#about">ccommit 소개</a></li>
-                <li><a class="nav-link" href="index.html#services">커리큘럼</a></li>
-                <li><a href="index.html#cta" class="nav-link">비용</a></li>
-                <li><a class="nav-link " href="index.html#portfolio">프로젝트</a></li>
-                <li><a class="nav-link" href="index.html#testimonials">멘티 후기</a></li>
-                <li><a class="nav-link" href="index.html#team">멘토 소개</a></li>
-                <li><a class="nav-link" href="blog.html">블로그</a></li>
+                <li><a class="nav-link" href="index.html#about" style="color: black;font-weight: bold;">ccommit 소개</a></li>
+                <li><a class="nav-link" href="index.html#services" style="color: black;font-weight: bold;">커리큘럼</a></li>
+                <li><a href="index.html#cta" class="nav-link" style="color: black;font-weight: bold;">비용</a></li>
+                <li><a class="nav-link " href="index.html#portfolio" style="color: black;font-weight: bold;">프로젝트</a></li>
+                <li><a class="nav-link" href="index.html#testimonials" style="color: black;font-weight: bold;">멘티 후기</a></li>
+                <li><a class="nav-link" href="index.html#team" style="color: black;font-weight: bold;">멘토 소개</a></li>
+                <li><a class="nav-link" href="blog.html" style="color: black;font-weight: bold;">블로그</a></li>
             </ul>
-            <i class="bi bi-list mobile-nav-toggle"></i>
+            <i class="bi bi-list mobile-nav-toggle" style="color:black;"></i>
         </nav><!-- .navbar -->
 
-        <a href="index.html#contact" class="get-started-btn">문의하기</a>
+        <a href="index.html#contact" class="get-started-btn" style="color: black;font-weight: bold; ">문의하기</a>
 
     </div>
 </header><!-- End Header -->
@@ -113,10 +112,17 @@
     <div style="background:BLACK;">
 
         <div id="carouselExampleDark">
-            <img src="assets/img/high/cc.png" width="30%" height="300" alt="..."
+            <img src="assets/img/high/ccc.png" width="30%" height="300" alt="..."
                  style="
                width: 100%;
               height: 500px;
+              border: 3px solid black;"
+            >
+            <img src="assets/img/high/c.png" width="20%" height="35%" alt="..."
+                 style="
+                  position: absolute;
+                  top: 20%;
+                  left: 62%;
               border: 3px solid black;"
             >
             <div class="section-title"
