--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:title" content="개발자 멘토링">
     <meta property="og:description" content="1:1 맞춤형 개발자 멘토링 서비스">
     <meta property="og:image" content="https://www.ccommit.kr/assets/img/favicon/subnail.png">
-    <meta name="naver-site-verification" content="ecbbc1a8d8efd794e1b0e5b10b9dda9491890983" />
-    <meta name="google-site-verification" content="T12CU9sPh23jMEebIWWDqVa-5Rh_Zu_WYn_UQr-BmHc" />
+    <meta name="naver-site-verification" content="ecbbc1a8d8efd794e1b0e5b10b9dda9491890983"/>
+    <meta name="google-site-verification" content="T12CU9sPh23jMEebIWWDqVa-5Rh_Zu_WYn_UQr-BmHc"/>
 
     <!-- Favicons -->
     <!--  <link href="assets/img/favicon.png" rel="icon">-->
@@ -80,6 +80,8 @@
       font-size: 35px;
       color: white;
     }
+
+
     </style>
 </head>
 
@@ -127,92 +129,99 @@
             <div id="bannerText" class="col-xl-6 col-lg-8">
                 <h1>1:1 맞춤형 <br>개발자 멘토링
                 </h1>
+                <div class="row gy-2 justify-content-center py-3" data-aos="zoom-in" data-aos-delay="250">
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-book fs-1"></i>
+                            <h3><a href="#services">이론 공부</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-laptop fs-1"></i>
+                            <h3><a href="#services">프로젝트 <br>진행</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-globe fs-1"></i>
+                            <h3><a href="#services">서버 배포 <br>프로세스 자동화</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-cloud fs-1"></i>
+                            <h3><a href="#services">클라우드 <br>기술 적용</a></h3>
+                        </div>
+                    </div>
+                    <dib></dib>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-star fs-1"></i>
+                            <h3><a href="#services">성능 테스트 <br>성능 튜닝</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-triangle fs-1"></i>
+                            <h3><a href="#services">모니터링 <br>트러블 슈팅</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-eye fs-1"></i>
+                            <h3><a href="#services">가상화 <br>기술 적용</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-bank fs-1"></i>
+                            <h3><a href="#services">취업 지원</a></h3>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
                 </div>
-                <div class="carousel-inner mt-1"  style="height:330px;width: 55%; margin: auto; display: block;" >
+                <div class="carousel-inner mt-1" style="">
                     <div class="carousel-item active" data-bs-interval="3000">
                         <a href="https://www.instagram.com/p/CpIO5WULLWV/" target="_blank">
-                        <img src="assets/img/banner/1.png" class="d-block w-250 mb-3" alt="..." style="height:330px;">
+                            <img src="assets/img/banner/11.png" class="d-block w-250 mb-3" alt="..."
+                                 style="height:672px;">
                         </a>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
                         <a href="https://forms.gle/nKxQrvw8Be8g68FLA" target="_blank">
-                        <img src="assets/img/banner/2.png" class="d-block w-350  mb-3" alt="..." style="height:330px;">
+                            <img src="assets/img/banner/22.png" class="d-block w-350  mb-3" alt="..."
+                                 style="height:672px;">
                         </a>
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
                         <a href="#about">
-                            <img src="assets/img/banner/3.png" class="d-block w-350  mb-3" alt="..." style="height:330px;">
+                            <img src="assets/img/banner/33.png" class="d-block w-350  mb-3" alt="..."
+                                 style="height:672px;">
                         </a>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-<!--                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--                    <span class="visually-hidden">Previous</span>-->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                        data-bs-slide="prev" style="position: absolute;left:-23%;">
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-<!--                    <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-<!--                    <span class="visually-hidden">Next</span>-->
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                        data-bs-slide="next" style="position: absolute;left: 108%;">
                 </button>
+
             </div>
         </div>
 
-        <div class="row gy-2 justify-content-center py-3" data-aos="zoom-in" data-aos-delay="250">
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-book fs-1"></i>
-                    <h3><a href="#services">이론 공부</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-laptop fs-1"></i>
-                    <h3><a href="#services">프로젝트 <br>진행</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-globe fs-1"></i>
-                    <h3><a href="#services">서버 배포 <br>프로세스 자동화</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-cloud fs-1"></i>
-                    <h3><a href="#services">클라우드 <br>기술 적용</a></h3>
-                </div>
-            </div>
-            <dib></dib>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-star fs-1"></i>
-                    <h3><a href="#services">성능 테스트 <br>성능 튜닝</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-triangle fs-1"></i>
-                    <h3><a href="#services">모니터링 <br>트러블 슈팅</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-eye fs-1"></i>
-                    <h3><a href="#services">가상화 <br>기술 적용</a></h3>
-                </div>
-            </div>
-            <div class="col-xl-2 col-md-4">
-                <div class="icon-box">
-                    <i class="bi-bank fs-1"></i>
-                    <h3><a href="#services">취업 지원</a></h3>
-                </div>
-            </div>
-        </div>
 
     </div>
 </section><!-- End Hero -->
@@ -226,7 +235,7 @@
             <div class="row">
                 <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
                     <img src="assets/img/about.jpg" class="img-fluid" alt="" style="margin-top: 120px;">
-<!--                    <img src="assets/img/high/f.PNG" class="img-fluid" alt="" style="margin-top: 120px;">-->
+                    <!--                    <img src="assets/img/high/f.PNG" class="img-fluid" alt="" style="margin-top: 120px;">-->
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"
                      data-aos-delay="100">
@@ -334,7 +343,7 @@
 
             <div class="row">
                 <div class="col-lg-4 col-md-6 align-items-stretch" data-aos="zoom-in" data-aos-delay="100"
-                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')" >
+                     OnClick="window.open('https://sepia-coat-481.notion.site/0-5f44fd43240c41d0a168a27c353bad64')">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-signpost"></i></div>
                         <h4><a>
@@ -782,11 +791,12 @@
                             <h4>2년차 서버 개발자</h4>
                             <p>
                                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                질문에 대해 매우 자유롭고 편안함을 주십니다. 수업과정을 나가면서 멘토님과 대화하다가 연관성 있는 것들까지도 추가로 공부해볼 수 있게  <br>
+                                질문에 대해 매우 자유롭고 편안함을 주십니다. 수업과정을 나가면서 멘토님과 대화하다가 연관성 있는 것들까지도 추가로 공부해볼 수 있게 <br>
                                 해주시고, 이해할 수 있도록 끝까지 예시를 들어주시며 설명해주셔서 만족합니다. 그리고 칭찬은 고래도 춤추게 한다는 말처럼 좋은 말씀을 많이 <br>
-                                해주셔서 자신감 또한 얻게 되었습니다. 머리론 알고 있지만 설명하지 못했던 제 자신이, 상대가 알아 들을 수 있을 수 있게 설명을 하려고 노력하고  <br>
-                                이어서 설명을 할 수 있게 되었습니다. 꾸준하진 않지만 가끔 공부를 하거나 책을 읽을 때 “왜?” 라는 생각으로 궁금한 걸 찾아보게 되어  <br>
-                                연장선상의 공부가 되고 스스로 공부할 수 있는 능력이 생겼습니다. 블로그 작성방법도 알게되고 <br> 피드백을 통해 수정하면서 조금씩 나아가는 제 블로그를 얻었습니다.
+                                해주셔서 자신감 또한 얻게 되었습니다. 머리론 알고 있지만 설명하지 못했던 제 자신이, 상대가 알아 들을 수 있을 수 있게 설명을 하려고 노력하고 <br>
+                                이어서 설명을 할 수 있게 되었습니다. 꾸준하진 않지만 가끔 공부를 하거나 책을 읽을 때 “왜?” 라는 생각으로 궁금한 걸 찾아보게 되어 <br>
+                                연장선상의 공부가 되고 스스로 공부할 수 있는 능력이 생겼습니다. 블로그 작성방법도 알게되고 <br> 피드백을 통해 수정하면서 조금씩 나아가는 제 블로그를
+                                얻었습니다.
                                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                             </p>
                         </div>
@@ -833,8 +843,10 @@
                                 <!--                                <a href="#"><i class="bi bi-instagram"></i></a>-->
                                 <!--                                <a href="#"><i class="bi bi-linkedin"></i></a>-->
                                 <a href="https://kmong.com/gig/353197" target="_blank"><i class="bi bi-link"></i></a>
-                                <a href="https://taling.me/Talent/Detail/40572" target="_blank"><i class="bi bi-link"></i></a>
-                                <a href="https://www.buymeacoffee.com/topojs8" target="_blank"><i class="bi bi-link"></i></a>
+                                <a href="https://taling.me/Talent/Detail/40572" target="_blank"><i
+                                        class="bi bi-link"></i></a>
+                                <a href="https://www.buymeacoffee.com/topojs8" target="_blank"><i
+                                        class="bi bi-link"></i></a>
                             </div>
                         </div>
                         <div class="member-info" style="padding-top:1px;">
@@ -921,8 +933,8 @@
                                target="_blank"><i class="bx bxl-instagram"></i></a>
                             <!--                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i-->
                             <!--                                    class="bx bxl-linkedin"></i></a>-->
-                                                        <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i
-                                                                class="bx bxl-youtube"></i></a>
+                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i
+                                    class="bx bxl-youtube"></i></a>
                         </div>
                     </div>
                 </div>
