ENH: 블로그 페이지 미디어쿼리 수정

--- a/blog.html
+++ b/blog.html
@@ -67,6 +67,12 @@
       #bannerText { display: none; }   /* hide it elsewhere */
     }
 
+    @media screen and (min-width: 1801px) and (max-width: 9000px) {
+      #carouselExampleDark { display: none; }  /* show it on small screens */
+      #bannerText { display: none; }   /* hide it elsewhere */
+    }
+
+
     </style>
 
 </head>
