ENH: 메인 페이지에 배너 영상 추가

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     }
 
 
+
     </style>
 </head>
 
@@ -191,12 +192,16 @@
                             aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
                             aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner mt-1" style="">
-                    <div class="carousel-item active" data-bs-interval="2000">
+                    <div class="carousel-item active" data-bs-interval="5000">
                         <a href="#about">
-                            <img src="assets/img/banner/33.png" class="d-block w-350  mb-3" alt="..."
-                                 style="height:672px;">
+
+                            <video controls width="100%" autoplay="autoplay" muted="muted" loop>
+                                <source src="assets/img/banner/banner.mp4" type="video/mp4">
+                            </video>
                         </a>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
@@ -208,6 +213,12 @@
                     <div class="carousel-item" data-bs-interval="2000">
                         <a href="https://forms.gle/nKxQrvw8Be8g68FLA" target="_blank">
                             <img src="assets/img/banner/22.png" class="d-block w-350  mb-3" alt="..."
+                                 style="height:672px;">
+                        </a>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <a href="#about">
+                            <img src="assets/img/banner/33.png" class="d-block w-350  mb-3" alt="..."
                                  style="height:672px;">
                         </a>
                     </div>
