ENH: 메인 페이지 영상 수정

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
 
-                <div class="carousel-indicators">
+                <div class="carousel-indicators" style="padding-bottom: 20px;">
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
@@ -196,7 +196,7 @@
                             aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner mt-1" style="">
-                    <div class="carousel-item active" data-bs-interval="1000">
+                    <div class="carousel-item active" data-bs-interval="3000">
                         <a href="#about">
                             <video controls width="100%" autoplay="autoplay" muted="muted" loop>
                                 <source src="assets/img/banner/banner.mp4" type="video/mp4">
