ENH: 패션서버 추가, 8월 갱신

--- a/index.html
+++ b/index.html
@@ -561,6 +561,20 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
+                            <h4>idolTicketing</h4>
+                            <p>인터파크 티켓팅 같은 백엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/idolTicketing"
+                                   title="idolTicketing"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
                             <h4>news</h4>
                             <p>네이버 뉴스 서비스의 백엔드 시스템</p>
                             <div class="portfolio-links">
@@ -624,20 +638,6 @@
                             <div class="portfolio-links">
                                 <a href="https://github.com/ccommit/Auction-server"
                                    title="Auction-server"
-                                   target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
-                    <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>idolTicketing</h4>
-                            <p>인터파크 티켓팅 같은 백엔드 서버</p>
-                            <div class="portfolio-links">
-                                <a href="https://github.com/ccommit/idolTicketing"
-                                   title="idolTicketing"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
