202402 수강생이력 수정, 강사 경력 추가

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-emoji-smile"></i>
                                     <p>멘티 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="53"
+                                    <span data-purecounter-start="0" data-purecounter-end="54"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -714,7 +714,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-journal-richtext"></i>
                                     <p>프로젝트 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="11"
+                                    <span data-purecounter-start="0" data-purecounter-end="12"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -741,7 +741,7 @@
 
                                 </div>
                             </div>
-                            <span style="text-align:right;">2023년 12월 기준</span>
+                            <span style="text-align:right;">2024년 01월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
@@ -916,6 +916,7 @@
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
                             <span>- 개발 경력 7년 이상, 수업 경력 3년 이상 </span>
                             <hr style="margin:0.5rem;border-top: 2px dotted"/>
+                            <span>- 패스트캠퍼스 소프트웨어 테스트 강의 (24.02) </span>
                             <span>- 패스트캠퍼스 대용량 트래픽 강의 (23.12) </span>
                             <span>- 한국공대 게임공학과 직무산업 특강 (23.07) </span>
                             <span>- 알고리즘잡스 몰입캠프 특강 (23.06) </span>
