20240225 프로젝트 완료목룍 추가

--- a/index.html
+++ b/index.html
@@ -547,6 +547,21 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
+                            <h4>game-auction-server</h4>
+                            <p>로스트아크 사이트에 있는 게임에 관련된 경매 백엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/game-auction-server"
+                                   title="game-auction-server"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
                             <h4>Auction-server</h4>
                             <p>옥션 중고 경매 시스템과 같은 경매 서비스 백엔드 서버</p>
                             <div class="portfolio-links">
