enh: 년도 수정, 블로그 메인페이지 수정, 만족도 조사 월 갱신

--- a/blog.html
+++ b/blog.html
@@ -118,24 +118,24 @@
     <div style="background:BLACK;">
 
         <div id="carouselExampleDark">
-            <img src="assets/img/high/ccc.png" width="30%" height="300" alt="..."
+            <img src="assets/img/high/ccc.png" width="30%" height="200" alt="..."
                  style="
                width: 100%;
-              height: 470px;
+              height: 270px;
               border: 3px solid black;"
             >
-            <img src="assets/img/high/c.PNG" width="20%" height="35%" alt="..."
-                 style="
-                  position: absolute;
-                  top: 18%;
-                  left: 63.2%;
-              border: 3px solid black;"
-            >
+<!--            <img src="assets/img/high/c.PNG" width="20%" height="35%" alt="..."-->
+<!--                 style="-->
+<!--                  position: absolute;-->
+<!--                  top: 18%;-->
+<!--                  left: 63.2%;-->
+<!--              border: 3px solid black;"-->
+<!--            >-->
             <div class="section-title"
                  style="padding: 5px 10px;
                     text-align: left;
                     position: absolute;
-                    top: 25%;
+                    top: 9%;
                     left: 13%;">
                 <p style="color:white;padding-top:35px;">CCOMMIT BLOG</p>
                 <h5 style="color:white;font-size:14px;padding-top:10px;padding-left:3px;">
@@ -293,7 +293,7 @@
 
     <div class="container">
         <div class="copyright">
-            <div class="small text-center text-muted">Copyright &copy; 2023 CCommit Company</div>
+            <div class="small text-center text-muted">Copyright &copy; 2024 CCommit Company</div>
         </div>
     </div>
 </footer><!-- End Footer -->
